Return result's count based on query
