# docs/swagger.yaml
@@ -40,6 +40,8 @@ definitions:
     type: object
   db.Farm:
     properties:
+      count:
+        type: integer
       farmId:
         type: integer
       name:
@@ -196,6 +198,10 @@ paths:
         in: query
         name: size
         type: integer
+      - description: Set farms' count on headers based on filter
+        in: query
+        name: ret_count
+        type: string
       - description: Min number of free ips in the farm
         in: query
         name: free_ips
@@ -250,6 +256,10 @@ paths:
         in: query
         name: size
         type: integer
+      - description: Set nodes' count on headers based on filter
+        in: query
+        name: ret_count
+        type: string
       - description: Min free reservable mru in bytes
         in: query
         name: free_mru
@@ -344,6 +354,10 @@ paths:
         in: query
         name: size
         type: integer
+      - description: Set nodes' count on headers based on filter
+        in: query
+        name: ret_count
+        type: string
       - description: Min free reservable mru in bytes
         in: query
         name: free_mru
